connected GitHub to NetBeans

--- a/trunk/DigitalTV.Simplify/nbproject/private/private.properties
+++ b/trunk/DigitalTV.Simplify/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=D:\\Users\\ebabayan1\\AppData\\Roaming\\NetBeans\\7.3\\build.properties
+user.properties.file=C:\\Users\\ebabayan\\AppData\\Roaming\\NetBeans\\7.2.1\\build.properties
